--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,10 @@
 		<servlet-name>EditerCollaborateurController</servlet-name>	
 		<servlet-class>dev.sgp.web.EditerCollaborateurController</servlet-class>	
 	</servlet>
+	<servlet>	
+		<servlet-name>AjouterCollaborateurController</servlet-name>	
+		<servlet-class>dev.sgp.web.AjouterCollaborateurController</servlet-class>	
+	</servlet>
 	
 	<servlet-mapping>
 		<servlet-name>ListerCollaborateursController</servlet-name>
@@ -22,6 +26,9 @@
 		<servlet-name>EditerCollaborateurController</servlet-name>
 		<url-pattern>/collaborateurs/editer</url-pattern>
 	</servlet-mapping>
-  
+  	<servlet-mapping>
+		<servlet-name>AjouterCollaborateurController</servlet-name>
+		<url-pattern>/collaborateurs/ajouter</url-pattern>
+	</servlet-mapping>
   
 </web-app>
