--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,34 +1,12 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
-<web-app>
-  <display-name>sgp</display-name>
-  
-	<servlet>
-		<servlet-name>ListerCollaborateursController</servlet-name>
-		<servlet-class>dev.sgp.web.ListerCollaborateursController</servlet-class>
-	</servlet>
-	<servlet>	
-		<servlet-name>EditerCollaborateurController</servlet-name>	
-		<servlet-class>dev.sgp.web.EditerCollaborateurController</servlet-class>	
-	</servlet>
-	<servlet>	
-		<servlet-name>AjouterCollaborateurController</servlet-name>	
-		<servlet-class>dev.sgp.web.AjouterCollaborateurController</servlet-class>	
-	</servlet>
-	
-	<servlet-mapping>
-		<servlet-name>ListerCollaborateursController</servlet-name>
-		<url-pattern>/collaborateurs/lister</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>EditerCollaborateurController</servlet-name>
-		<url-pattern>/collaborateurs/editer</url-pattern>
-	</servlet-mapping>
-  	<servlet-mapping>
-		<servlet-name>AjouterCollaborateurController</servlet-name>
-		<url-pattern>/collaborateurs/ajouter</url-pattern>
-	</servlet-mapping>
-  
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd" id="WebApp_ID" version="2.4">
+	<display-name>sirh-gestion-personnel</display-name>
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+		<welcome-file>index.htm</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>default.html</welcome-file>
+		<welcome-file>default.htm</welcome-file>
+		<welcome-file>default.jsp</welcome-file>
+	</welcome-file-list>
 </web-app>
